Removed text from the fullscreen button and fixed the wrong background being shown when in landscape mode

--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -27,11 +27,13 @@
     justify-content: center;
     gap: 20px;
     background-color: transparent;
+    border: none;
 }
 .expand .fullscreen-button{
-    width: calc(100% - 10px);
-    align-self: center;
+    margin-left: auto;
+    margin-right: 10px;
 }
+
 .toggle-button{
     width: 50px;
     height: 50px;
