--- a/src/components/SideMenu/Workboard/Workboard.module.css
+++ b/src/components/SideMenu/Workboard/Workboard.module.css
@@ -55,6 +55,7 @@ h4{
     height: 50px;
     align-self: center;
     border: 1px solid rgba(211, 211, 211, 0.1);
+    background-color: #0F0F0F;
 }
 
 @media (orientation: portrait) {
